k8s/04-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-api-service
  namespace: employee-ns

spec:
  selector:
    app: employee-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
