k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-api-ingress
  namespace: employee-ns

spec:
  ingressClassName: nginx

  rules:
  - host: employee.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: employee-api-service

            port:
              number: 80
